--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -1,6 +1,12 @@
 // grid variables
-$grid-columns: 4;
+$grid-columns: 12;
 $grid-max-width: 65em;
+$mint: rgb(217, 245, 232);
+$teal: rgb(55, 203, 194);
+$gold: rgb(255, 187, 51);
+$tomato: rgb(255, 99, 71);
+$weight: 65%;
+
 
 
 // breakpoints
