--- a/scss/input.scss
+++ b/scss/input.scss
@@ -6,6 +6,7 @@
 *:before {
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
 
     @include border-box;
 }
@@ -15,7 +16,6 @@ img {
     max-width: 100%;
     height: auto !important;
 }
-
 .wrapper,
 .row {
   @extend %clearfix;
@@ -23,19 +23,129 @@ img {
 
 [class*='column-'] {
     float: left;
-    padding: 1em;
-    width: 100%;
+    // padding: 1em;
     min-height: 1px;
+}
+.no-style {
+  list-style: none;
+}
+.list-left {
+  float: left;
+  font-weight: bold;
+}
+.list-right {
+  float: right;
+  text-align: right;
+  font-size: 15px;
+}
+
+$colors: (
+  'mint': $mint,
+  'teal': $teal,
+  'gold': $gold,
+  'tomato': $tomato
+);
+@each $color, $rgb in $colors {
+  .text-#{$color} {
+    color: $rgb;
+  }
+  .bg-#{$color} {
+    background-color: $rgb;
+  }
+  .light-#{$color} {
+    background-color: lighten($rgb, 8%);
+  }
+  .dark-#{$color} {
+    background-color: darken($rgb, 10%);
+  }
+  .mintmix-#{$color} {
+    background-color: mix($rgb, $mint, $weight);
+  }
+  .tealmix-#{$color} {
+    background-color: mix($rgb, $teal, $weight);
+  }
+  .teal-mix-text-#{$color} {
+    color: mix($rgb, $teal, $weight);
+  }
+  .goldmix-#{$color} {
+    background-color: mix($rgb, $gold, $weight);
+  }
+  .tomatomix-#{$color} {
+    background-color: mix($rgb, $tomato, $weight);
+  }
+}
+.column-3 .column-4 {
+  margin: 0;
+}
+
+.text .column-3 {
+  height: auto;
+}
+
+.column-3 p {
+  margin-top: 15px;
+  font-size: 15px;
+  text-align: center;
+}
+.huge {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 4em;
+  font-weight: 200;
+}
+.huge-sub {
+  font-family: 'Open Sans', sans-serif;
+}
+.huge2 {
+  font-family: 'Bree Serif', serif;
+  font-size: 4em;
+  font-weight: 200;
+}
+.huge-sub2 {
+  font-family: 'Bree Serif', serif;
+}
+.column-11 h1, .column-11 h2, .column-11 h3 {
+  margin-top: auto;
+}
+
+h3 {
+  margin-top: 10px;
+}
+
+h2 {
+  margin-top: 20px;
+}
+
+h1 {
+  margin-top: 20px;
 }
 
 @media #{$breakpoint-medium} {
   .wrapper {
-    width: 95%;
+    width: 100%;
     max-width: $grid-max-width;
+    margin: 0 auto;
   }
   @for $i from 1 through $grid-columns {
     .column-#{$i} {
-      width: 100% / $grid-columns * $i;
+      width: 97% / $grid-columns * $i;
+      margin: 3px;
+      height: 8em;
     }
+  }
+  .column-1, .column-11 {
+    height: auto;
+  }
+  .column-11 p {
+    font-size: .2em;
+  }
+  .column-1 p {
+    font-size: .75em;
+  }
+  hr {
+    margin: 10px auto;
+  }
+
+  .mix .column-3 {
+    height: 30px;
   }
 }
