--- a/scss/input.scss
+++ b/scss/input.scss
@@ -103,6 +103,9 @@ $colors: (
 .huge-sub2 {
   font-family: 'Bree Serif', serif;
 }
+.space {
+  margin-bottom: 20px;
+}
 .column-11 h1, .column-11 h2, .column-11 h3 {
   margin-top: auto;
 }
