--- a/css/input.css
+++ b/css/input.css
@@ -176,6 +176,9 @@ img {
 .huge-sub2 {
   font-family: 'Bree Serif', serif; }
 
+.space {
+  margin-bottom: 20px; }
+
 .column-11 h1, .column-11 h2, .column-11 h3 {
   margin-top: auto; }
 
